--- a/.gitconfig
+++ b/.gitconfig
@@ -1,39 +1,42 @@
 [include]
-    path = .gitconfig.local
+  path = .gitconfig.local
 
 [http]
-	sslVerify = false
+  sslVerify = false
 [push]
-		default = simple
+  default = simple
 [core]
-		editor = vim -c \"set fenc=utf-8\"
+  editor = vim -c \"set fenc=utf-8\"
+  excludesfile = ~/.gitignore_global
 [filter "lfs"]
-	clean = git-lfs clean -- %f
-	smudge = git-lfs smudge -- %f
-	required = true
-	process = git-lfs filter-process
+  clean = git-lfs clean -- %f
+  smudge = git-lfs smudge -- %f
+  required = true
+  process = git-lfs filter-process
 
 [color]
-		ui = auto
-		diff = auto
+  ui = auto
+  diff = auto
 
 [push]
-		default = tracking
+  default = tracking
 
 [log]
-		date = iso
-		decorate = full
+  date = iso
+  decorate = full
 
 [alias]
-		graph  = log --graph --decorate=short --date-order -C -M --pretty=format:\"<%h> %ad%x08%x08%x08%x08%x08%x08%x08%x08%x08 [%cn] %Cgreen%d%Creset %s\" --all --date=iso
-		graph1 = log --graph --decorate=short --date-order -C -M --pretty=format:\"<%h> %ad%x08%x08%x08%x08%x08%x08%x08%x08%x08 [%cn] %Cgreen%d%Creset %s\" --date=iso
-		br = branch
-		co = checkout
-		lg = log
-		st = status -sb
-		mrg = merge --no-ff
-		root = rev-parse --show-toplevel
+  graph  = log --graph --decorate=short --date-order -C -M --pretty=format:\"<%h> %ad%x08%x08%x08%x08%x08%x08%x08%x08%x08 [%cn] %Cgreen%d%Creset %s\" --all --date=iso
+  graph1 = log --graph --decorate=short --date-order -C -M --pretty=format:\"<%h> %ad%x08%x08%x08%x08%x08%x08%x08%x08%x08 [%cn] %Cgreen%d%Creset %s\" --date=iso
+  br = branch
+  co = checkout
+  poh = push origin head
+  pom = push origin head
+  lg = log
+  st = status -sb
+  mrg = merge --no-ff
+  root = rev-parse --show-toplevel
   ch = checkout
 [user]
-	name = Yuta TASAKA
-	email = yuta.tasaka@dena.com
+  name = Yuta TASAKA
+  email = yuta.tasaka@gmail.com
